# nonspherical-sidm-jeans-model

./: .gitignore  README.md  notes.txt  pyproject.toml  requirements.txt
configs/: run_dict.py
examples/: DMO.ipynb  densities.ipynb  dev.ipynb  examples.ipynb  profiles.ipynb  rotationcurves.ipynb  shapes.ipynb  simulations.ipynb  simulations.py  test_profile_w_baryons.npz  test_profile_w_baryons_dill.npz
examples/data/: test_profile.npz  test_profile_dill.npz  test_profile_named_func.npz
scripts/: run.py  run_dict.py  run_jeans.py
src/jeans/: __init__.py  cdm.py  classes.py  definitions.py  gen.py  nonspherical.py  potential.py  rotcurve.py  spherical.py  tools.py
src/sidmhalo/: MANIFEST.in  __init__.py  cdm.py  classes.py  definitions.py  gen.py  nonspherical.py  potential.py  rotcurve.py  spherical.py  tools.py
