[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sidmhalo"
version = "0.1.0"
description = "Nonspherical Jeans modelling for SIDM halos."
authors = [
  { name = "Sean Tulin", email = "stulin@yorku.ca" },
  { name = "Adam Smith-Orlik", email = "asorlik@yorku.ca" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "matplotlib==3.10.3",
  "numpy==2.3.2",
  "pandas==2.3.1",
  "scipy==1.16.1",
  "setuptools==75.3.0",
  "findiff"
]

[project.urls]
"Source Code" = "https://github.com/AdamSmithOrlik/nonspherical-sidm-jeans-model.git"

